fix(ctrn): news date align affected aritcle page

--- a/ctrn_assets/css/news-feed--news-page.css
+++ b/ctrn_assets/css/news-feed--news-page.css
@@ -7,7 +7,7 @@
         'subtitle subtitle'
         'tags     tags';
 }
-.post-detail.dates {
+.post-item:not(.post-detail) header .dates {
     /* FAQ: Because CTRN grid-template-areas moves date position in header */
     text-align: right;
 }
